# FaceDetection

Descriptores/: CMakeLists.txt  Descriptores.cpp  Descriptores.hpp  Imagen.cpp  Imagen.hpp  main.cpp
