project(bow_finalV01)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
find_package( OpenCV REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(  bow_finalV01 ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "-O2 -Wall -pipe -std=c++11")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
